# StickyNote

./: README.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
ui/: index.html
