[package]
name = "my-sticky-note"
version = "0.1.0"
description = "A lightweight atomic sticky note"
authors = ["Product Manager"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["windows7-compat", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
